[package]
name = "japhonex"
version = "0.1.0"
authors = ["TKNF LLC"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tknf/japhonex-rust"
homepage = "https://github.com/tknf/japhonex-rust"
description = "Japanese phone number checker for Rust"
categories = ["text-processing"]
autotests = false
exclude = ["/.vscode/*"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"

[lib]
name = "japhonex"
path = "src/japhonex.rs"